<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/matkulJadwal_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_matkul"
        android:backgroundTint="@color/colorPrimary" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/hari_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp" />

    <EditText
        android:id="@+id/waktu_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_waktu"
        android:backgroundTint="@color/colorPrimary" >
    </EditText>

    <EditText
        android:id="@+id/ruangan_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/judul_ruangan"
        android:backgroundTint="@color/colorPrimary" >
    </EditText>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_update_jadwal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_update"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif" />

        <Button
            android:id="@+id/btn_delete_jadwal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_delete"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif" />
    </LinearLayout>

</LinearLayout>