<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp" >


    <EditText
        android:id="@+id/matkulJadwal_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_matkul"
        android:importantForAutofill="no"
        android:inputType="text"
        android:backgroundTint="@color/colorPrimary">
        <requestFocus />
    </EditText>


    <Spinner
        android:id="@+id/hari_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"/>

    <EditText
        android:id="@+id/waktu_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_waktu"
        android:importantForAutofill="no"
        android:inputType="text"
        android:backgroundTint="@color/colorPrimary" >
    </EditText>

    <EditText
        android:id="@+id/ruangan_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_ruangan"
        android:importantForAutofill="no"
        android:inputType="text"
        android:backgroundTint="@color/colorPrimary" >
    </EditText>

    <Button
        android:id="@+id/add_jadwal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/tambah"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif" />

</LinearLayout>