<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp" >


    <EditText
        android:id="@+id/keterangan_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/keterangan"
        android:backgroundTint="@color/colorPrimary">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/note_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="4"
        android:hint="@string/catatan"
        android:backgroundTint="@color/colorPrimary" >
    </EditText>

    <Button
        android:id="@+id/add_catatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/tambah"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif" />

</LinearLayout>