<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

        <EditText
            android:id="@+id/matkul_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_matkul"
            android:importantForAutofill="no"
            android:inputType="text"
            android:backgroundTint="@color/colorPrimary" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/sks_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_sks"
            android:importantForAutofill="no"
            android:inputType="number"
            android:backgroundTint="@color/colorPrimary" >
        </EditText>

        <Spinner
            android:id="@+id/indeks_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp" />

        <Spinner
            android:id="@+id/semester_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_update_matkul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_update"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_delete_matkul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_delete"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

</LinearLayout>