<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/matkul_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_matkul"
        android:importantForAutofill="no"
        android:inputType="text"
        android:backgroundTint="@color/colorPrimary">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/sks_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_sks"
        android:importantForAutofill="no"
        android:inputType="number"
        android:backgroundTint="@color/colorPrimary" >
    </EditText>

    <Spinner
        android:id="@+id/indeks_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp" />


    <Spinner
        android:id="@+id/semester_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp" />

    <Button
        android:id="@+id/add_matkul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/tambah"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif" />

</LinearLayout>