<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:id="@+id/view_judul_matkul">


    <TextView
        android:id="@+id/judul_matkul"
        android:layout_width="fill_parent"
        android:text="@string/judul_matkul"
        android:layout_toStartOf="@id/judul_sks"

        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:maxLines="1"
        android:paddingRight="@dimen/dimen_3dp"
        android:paddingLeft="@dimen/dimen_3dp"
        android:paddingTop="@dimen/dimen_10dp"
        android:paddingBottom="@dimen/dimen_10dp"
        android:textSize="@dimen/dimen_15sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-black"/>

    <TextView
        android:id="@+id/judul_sks"
        android:layout_width="@dimen/dimen_50dp"
        android:text="@string/judul_sks"
        android:layout_toStartOf="@id/judul_indeks"

        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingRight="@dimen/dimen_3dp"
        android:paddingLeft="@dimen/dimen_3dp"
        android:paddingTop="@dimen/dimen_10dp"
        android:paddingBottom="@dimen/dimen_10dp"
        android:textSize="@dimen/dimen_15sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-black"/>

    <TextView
        android:id="@+id/judul_indeks"
        android:layout_toStartOf="@id/judul_semester"
        android:layout_width="50dp"
        android:text="@string/judul_nilai"

        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingRight="@dimen/dimen_3dp"
        android:paddingLeft="@dimen/dimen_3dp"
        android:paddingTop="@dimen/dimen_10dp"
        android:paddingBottom="@dimen/dimen_10dp"
        android:textSize="@dimen/dimen_15sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-black"/>

    <TextView
        android:id="@+id/judul_semester"
        android:layout_width="@dimen/dimen_75dp"
        android:text="@string/judul_semester"
        android:layout_alignParentEnd="true"

        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingRight="@dimen/dimen_3dp"
        android:paddingLeft="@dimen/dimen_3dp"
        android:paddingTop="@dimen/dimen_10dp"
        android:paddingBottom="@dimen/dimen_10dp"
        android:textSize="@dimen/dimen_15sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-black"/>



</RelativeLayout>